--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -43,10 +43,10 @@
                 {% for c in categories %}
                     <tr>
                         <td>{{c.name}}</td>
-                        <td style="text-align:center;">{{ n_apps_per_category[c.short_name]}}</td>
+                        <td style="text-align:center;">{{ n_projects_per_category[c.short_name]}}</td>
                         <td style="text-align:center;"><div class="btn-group">
                             <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-edit"></i> {{_('Edit Category')}}</a>
-                            {% if n_apps_per_category[c.short_name] == 0 and (categories | count > 1) %}
+                            {% if n_projects_per_category[c.short_name] == 0 and (categories | count > 1) %}
                             <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
                             {% else %}
                             <a href="#" class="btn disabled"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
