--- a/templates/applications/actions.html
+++ b/templates/applications/actions.html
@@ -1,7 +1,7 @@
-{% extends "applications/project.html" %}
-{% set active_page = "applications" %}
-{% set active_app  = "all" %}
-{% set active_app = project.short_name %}
+{% extends "projects/project.html" %}
+{% set active_page = "projects" %}
+{% set active_project  = "all" %}
+{% set active_project = project.short_name %}
 
 {% block update %}
   <div class="row" style="padding-top:20px">
