--- a/templates/applications/export.html
+++ b/templates/applications/export.html
@@ -1,7 +1,7 @@
 {% extends "/base.html" %}
 {% set active_menu = "project" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
@@ -12,7 +12,7 @@
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
                             {% include "_flash_messages.html" %}
-                        {{ helper.render_app_title(app, upload_method, subtitle=_('Export Tasks'))}}
+                        {{ helper.render_project_title(project, upload_method, subtitle=_('Export Tasks'))}}
                         {{ helper.render_loading("Exporting data, this may take a while, please wait...") }}
                         <h3 class="text-inset-grey">Export Raw Data</h3>
                         <div class="row">
