--- a/templates/applications/tasks/delete.html
+++ b/templates/applications/tasks/delete.html
@@ -1,7 +1,7 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
+{% set active_page = "projects" %}
 {% set active_link  = "settings" %}
-{% import "applications/_helpers.html" as helper %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
