--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -36,7 +36,7 @@
                 <h2>{{ _('Technology') }}</h2>
                 
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, an open-source Python framework for the creation of
-                crowd-sourcing projects. Individual applications are primarily written in HTML and Javascript.</p>
+                crowd-sourcing projects. Individual projects are primarily written in HTML and Javascript.</p>
             
             <div class="col-sm-6 col-sm-offset-3 col-xs-12 padding-top-sm">
                 <div class="col-xs-4"><img src="{{url_for('static',filename='img/html-logo.png')}}" class="img-responsive web-badge"></div>
