--- a/templates/account/applications.html
+++ b/templates/account/applications.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
 {% import "account/_helpers.html" as helper %}
-{% import "applications/_helpers.html" as app_helper %}
+{% import "projects/_helpers.html" as project_helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{{ render_local_nav(current_user, "openapp") }}
+{{ render_local_nav(current_user, "openproject") }}
      <div class="container-padded  remove-padding-bottom hidden-container" style="display:none;">
         <div class="container container-padded">
             <div class="row">
@@ -22,8 +22,8 @@
                         </div>
                     </div>
                     <hr>
-                    {% if apps_published or apps_draft %}
-                    {% if apps_published %}
+                    {% if projects_published or projects_draft %}
+                    {% if projects_published %}
                     <div class="col-xs-12">
                         <h2>{{ _('Published') }}</h2>
                     </div>
@@ -35,12 +35,12 @@
                                 <th>Action</th>
                             </tr>
                         </thead>
-                        {% for app in apps_published %}
-                            {{ app_helper.render_app_short_summary(app, upload_method) }}
+                        {% for project in projects_published %}
+                            {{ project_helper.render_project_short_summary(project, upload_method) }}
                         {% endfor %}
                     </table>
                     {% endif %}
-                    {% if apps_draft %}
+                    {% if projects_draft %}
                     <div class="col-xs-12">
                         <h2>{{ _('Draft') }}</h2>
                     </div>
@@ -52,8 +52,8 @@
                                 <th>Action</th>
                             </tr>
                         </thead>
-                        {% for app in apps_draft %}
-                            {{ app_helper.render_app_short_summary(app, upload_method) }}
+                        {% for project in projects_draft %}
+                            {{ project_helper.render_project_short_summary(project, upload_method) }}
                         {% endfor %}
                     </table>
                     {% endif %}
@@ -63,11 +63,11 @@
                     </div>
                     {% endif %}
                     {% else %}
-                        {{ app_helper.render_app_restricted() }}
+                        {{ project_helper.render_project_restricted() }}
                     {% endif %}
                 </div>
             </div>
         </div>
     </div>
-{{ app_helper.broken_image() }}
+{{ project_helper.broken_image() }}
 {% endblock %}
