--- a/templates/applications/auditlog.html
+++ b/templates/applications/auditlog.html
@@ -1,18 +1,18 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
 
-    {% if app %}
+    {% if project %}
         {{ render_local_nav(current_user, 'auditlog', project.short_name) }}
             <div class="container-padded hidden-container" style="display:none;">
                 <div class="container container-padded">
                     <div class="row">
                         <div class="col-sm-9 col-sm-offset-3">
                             {% include "_flash_messages.html" %}
-                        {{ helper.render_app_title(app, upload_method) }}
+                        {{ helper.render_project_title(project, upload_method) }}
                         {% if logs %}
                         <table class="table table-stripped table-condensed table-hover table-responsive">
                             <thead>
