--- a/templates/applications/blog_post.html
+++ b/templates/applications/blog_post.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 
 {% block content %}
 <div class="container-padded">
