--- a/templates/applications/index.html
+++ b/templates/applications/index.html
@@ -1,7 +1,7 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
+{% set active_page = "projects" %}
 
-{% import "applications/_helpers.html" as helper %}
+{% import "projects/_helpers.html" as helper %}
 
 {% block content %}
 <script src="{{url_for('static', filename='js/vendor/isotope.pkgd.min.js')}}"></script>
@@ -13,7 +13,7 @@
             <div class="col-xs-10 col-xs-offset-1">
                 <ul class="nav nav-pills">
                     {% for c in categories %}
-                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('project.app_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
+                                <li {% if active_cat.short_name==c.short_name%}class="active" {% else %} class=""{% endif %}><a href="{{url_for('project.project_cat_index', category=c.short_name)}}"> {{ c.name }}</a></li>
                             {% endfor %}
                             {% if current_user.is_authenticated() and current_user.admin %}
                                 <li {% if active_cat.short_name=="draft"%}class="active"{% endif %}><a href="{{url_for('project.draft')}}"> {{ _('Draft') }}</a></li>
@@ -36,10 +36,10 @@
                             </ul>
                         </div>
                 
-                    {% if apps %}
+                    {% if projects %}
                         <ul class="polaroids projects margin-top-sm">
-                            {% for app in apps %}
-                                {{ helper.show_app(app, active_cat.short_name, current_user, upload_method) }}
+                            {% for project in projects %}
+                                {{ helper.show_project(project, active_cat.short_name, current_user, upload_method) }}
                             {% endfor %}
                         </ul>
                             {% if pagination.pages > 1 %}
