--- a/templates/applications/new_blogpost.html
+++ b/templates/applications/new_blogpost.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
@@ -11,7 +11,7 @@
         <div id="app-form" class="row"> 
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_app_title(app) }}
+                {{ helper.render_project_title(app) }}
                 <h2>{{ _('Write a new blog post for ad') }} {{ project.name }}</h2>
             <form class="form-horizontal" method="post" action="{{ url_for('project.new_blogpost', short_name=project.short_name) }}">
                 {{ form.hidden_tag() }}
