--- a/templates/applications/non_stats.html
+++ b/templates/applications/non_stats.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
@@ -10,7 +10,7 @@
                 <div class="row">
                     <div class="col-sm-9 col-sm-offset-3">
                         {% include "_flash_messages.html" %}
-                        {{helper.render_app_title(app, upload_method, subtitle='Statistics') }}
+                        {{helper.render_project_title(project, upload_method, subtitle='Statistics') }}
                         <h3>Sorry, there are no statistics for this project yet</h3>
                     </div>
                 </div>
