--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
@@ -9,7 +9,7 @@
 <div id="app-form" class="row"> 
     <div class="col-sm-6 col-sm-offset-3">
         {% include "_flash_messages.html" %}
-        {{ helper.render_app_title(app) }}
+        {{ helper.render_project_title(app) }}
         <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
     <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
         {{ form.hidden_tag() }}
