--- a/templates/applications/settings.html
+++ b/templates/applications/settings.html
@@ -1,14 +1,14 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    {{ render_local_nav(current_user, "appsettings", project.short_name) }}
+    {{ render_local_nav(current_user, "projectsettings", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
-            {% if app %}
+            {% if project %}
             <!-- Project -->
             <div class="col-sm-9 col-sm-offset-3 xs-center">
                 {% include "_flash_messages.html" %}
