--- a/templates/applications/task_autoimport_options.html
+++ b/templates/applications/task_autoimport_options.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_app_title(app, subtitle=_('Setup task autoimporter'))}}
+                {{ helper.render_project_title(project, subtitle=_('Setup task autoimporter'))}}
                 <div class="row">
                     <div class="col-sm-12">
                         <p class="lead">{{_('Use one of the following available')}}
