--- a/templates/applications/task_import_options.html
+++ b/templates/applications/task_import_options.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_app_title(app, subtitle=_('Import Tasks'))}}
+                {{ helper.render_project_title(project, subtitle=_('Import Tasks'))}}
                 <div class="row">
                     <div class="col-md-12">
                         <p class="lead">Use one of the following <strong>importers</strong> to import tasks</p>
