--- a/templates/applications/task_n_answers.html
+++ b/templates/applications/task_n_answers.html
@@ -1,18 +1,18 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "_formhelpers.html" import render_field %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{% if app %}
+{% if project %}
 {{ render_local_nav(current_user, "redundancy", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                        {{ helper.render_app_title(app, subtitle=_('Task Redundancy')) }}
+                        {{ helper.render_project_title(project, subtitle=_('Task Redundancy')) }}
                         <form id="task_redundancy" class="form-horizontal" method="post" action="{{ url_for('project.task_n_answers', short_name=project.short_name) }}">
                             {{ form.hidden_tag() }}
                             <fieldset>
