--- a/templates/applications/task_priority.html
+++ b/templates/applications/task_priority.html
@@ -1,18 +1,18 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "_formhelpers.html" import render_field %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{% if app %}
+{% if project %}
 {{ render_local_nav(current_user, "tasks", project.short_name) }}
 <div class="container-padded hidden-container" style="display:none;">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_app_title(app, subtitle=_('Task Priority'))}}
+                {{ helper.render_project_title(project, subtitle=_('Task Priority'))}}
                 
                 <p>Set the <strong>{{_('priority')}}</strong> of one or more tasks by providing a list of task IDs below.</p>
                 <p>The lowest priority is <span class="label label-danger">0.0</span> and the highest is <span class="label label-danger">1.0</span></p>
