--- a/templates/applications/tasks.html
+++ b/templates/applications/tasks.html
@@ -1,10 +1,10 @@
 {% extends "/base.html" %}
-{% set active_page = "applications" %}
-{% import "applications/_helpers.html" as helper %}
+{% set active_page = "projects" %}
+{% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-{% if app %}
+{% if project %}
 {{ render_local_nav(current_user, "tasks", project.short_name) }}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 <div class="container-padded hidden-container" style="display:none;">
