--- a/templates/applications/tutorial.html
+++ b/templates/applications/tutorial.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
-{% set active_page = "applications"  %}
-{% set active_app = project.short_name %}
+{% set active_page = "projects"  %}
+{% set active_project = project.short_name %}
 
 {% block content %}
 
