--- a/templates/help/api.html
+++ b/templates/help/api.html
@@ -2,8 +2,8 @@
 {% set active_page = "help" %}
 
 {% block content %}
-{% if not app_id %}
-{% set app_id=1 %}
+{% if not project_id %}
+{% set project_id=1 %}
 {% endif %}
     <div class="container-padded">
         <div class="container container-padded">
@@ -27,7 +27,7 @@
                 you can obtain them by opening the following URL:
                 </p>
                 <ul>
-                    <li><a href="{{url_for('api.api_app')}}">{{url_for('api.api_app', _external=True)}}</a></li>
+                    <li><a href="{{url_for('api.api_project')}}">{{url_for('api.api_project', _external=True)}}</a></li>
                 </ul>
                 <p>
                 <span class="label labe-warning"><i class="glyphicon glyphicon-bullhorn"></i> Note</span>
@@ -37,7 +37,7 @@
                 </p>
                 <p>You can also do <strong>queries using the API</strong>. For example, search for a specific project:</p>
                 <ul>
-                    <li><a href="{{url_for('api.api_app', short_name='flickrperson')}}">{{url_for('api.api_app', short_name='flickrperson', _external=True)}}</a></li>
+                    <li><a href="{{url_for('api.api_project', short_name='flickrperson')}}">{{url_for('api.api_project', short_name='flickrperson', _external=True)}}</a></li>
                 </ul>
                 <p>
                 For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
@@ -59,13 +59,13 @@
                 </p>
                 <p>You can also do <strong>queries using the API</strong>. For example, get the tasks for a given project using the project id:</p>
                 <ul>
-                    <li><a href="{{url_for('api.api_task', app_id=app_id)}}">{{url_for('api.api_task', app_id=app_id, _external=True)}}</a></li>
+                    <li><a href="{{url_for('api.api_task', project_id=project_id)}}">{{url_for('api.api_task', project_id=project_id, _external=True)}}</a></li>
                 </ul>
                 <p>
                 Or for example <strong>get a list of completed tasks for a given project</strong> (i.e it could return an empty list because there are no tasks completed yet):
                 </p>
                 <ul>
-                    <li><a href="{{url_for('api.api_task', app_id=app_id, state='completed')}}">{{url_for('api.api_task', app_id=app_id,  state='completed', _external=True)}}</a></li>
+                    <li><a href="{{url_for('api.api_task', project_id=project_id, state='completed')}}">{{url_for('api.api_task', project_id=project_id,  state='completed', _external=True)}}</a></li>
                 </ul>
                 <p>
                 For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
@@ -87,7 +87,7 @@
                 </p>
                 <p>You can also do <strong>queries using the API</strong>. For example, get the task runs -in other words the answers for a given task- for a given project using the project id:</p>
                 <ul>
-                    <li><a href="{{url_for('api.api_taskrun', app_id=app_id)}}">{{url_for('api.api_taskrun', app_id=app_id, _external=True)}}</a></li>
+                    <li><a href="{{url_for('api.api_taskrun', project_id=project_id)}}">{{url_for('api.api_taskrun', project_id=project_id, _external=True)}}</a></li>
                 </ul>
                 <p>
                 For more information about the API please, see the <a href="http://docs.pybossa.com/en/latest/api.html">documentation</a> and the <a href="http://docs.pybossa.com/en/latest/user/tutorial.html">step by step tutorial</a> that explores the usage of the API.
