--- a/templates/help/license.html
+++ b/templates/help/license.html
@@ -20,7 +20,7 @@
                     </p>
                 </section>
                 <hr>
-                <section id="applications">
+                <section id="projects">
                     <h1>Projects</h1>
                     <p>
                     Most of the projects will have an open source license, like:
