--- a/templates/stats/global.html
+++ b/templates/stats/global.html
@@ -1,6 +1,6 @@
 {% extends "/base.html" %}
 {% set active_page = "globalstats" %}
-{% set active_app  = "all" %}
+{% set active_project  = "all" %}
 {% import "privacy/locked.html" as privacy %}
 
 {% block content %}
@@ -32,7 +32,7 @@
                 <div class="row padding-bottom-sm">
                     <div class="col-xs-12">
                         <div class="white-rounded inset-shadow-white chart">
-                            <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_total_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_apps}}" data-noun="project"></span>, submitted <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="answer"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h3>
+                            <h3 class="text-center"><span class="check-plural" data-num="{{stats.n_total_users}}" data-noun="volunteer"></span> have participated in <span class="check-plural" data-num="{{stats.n_published_projects}}" data-noun="project"></span>, submitted <span class="check-plural" data-num="{{stats.n_task_runs}}" data-noun="answer"></span> and completed <span class="check-plural" data-num="{{stats.n_tasks_completed}}" data-noun="task"></span></h3>
                         </div>
                     </div>
                 </div>
@@ -439,8 +439,8 @@ $(function(){
         //Top 5 projects this week
         var projects = [];
         var tasks = [];
-        {% if top5_apps_1_week %}
-            {% for app in top5_apps_1_week %}
+        {% if top5_projects_1_week %}
+            {% for project in top5_projects_1_week %}
                 projects.push('{{project.name}}');
                 tasks.push(parseInt({{project.n_answers}}));
             {% endfor %}
