--- a/templates/applications/snippets/cards.html
+++ b/templates/applications/snippets/cards.html
@@ -16,7 +16,7 @@
             <br/>
             <div class="alert-actions">
                 <a class="btn btn-small" href="/">Go back</a>
-                <a class="btn btn-small" href="/app">or, Check other projects</a>
+                <a class="btn btn-small" href="/project">or, Check other projects</a>
             </div>
         </div>
         <div id="error" class="alert alert-danger" style="display:none;">
