--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -72,17 +72,17 @@
         <td><a href="{{url_for('project.tasks', short_name=project.short_name)}}">{{project.name}}</a></td>
         <td>{{ project['short_name'] }}</td>
         {% if project.featured %}
-            <td style="text-align:center;"><a id="appBtnDel{{project.id}}" class="btn btn-inverse" onclick="del({{project.id}})">
+            <td style="text-align:center;"><a id="projectBtnDel{{project.id}}" class="btn btn-inverse" onclick="del({{project.id}})">
                     <i id="project{{project.id}}" class="glyphicon glyphicon-remove"></i> {{ _('Remove') }}
             </a>
-            <a id="appBtnAdd{{project.id}}" class="btn btn-inverse" onclick="add({{project.id}})" style="display:none;">
+            <a id="projectBtnAdd{{project.id}}" class="btn btn-inverse" onclick="add({{project.id}})" style="display:none;">
                     <i id="project{{project.id}}" class="glyphicon glyphicon-plus"></i> {{ _('Add') }}
             </a></td>
         {% else %}
-            <td style="text-align:center;"><a id="appBtnAdd{{project.id}}" class="btn btn-inverse" onclick="add({{project.id}})">
+            <td style="text-align:center;"><a id="projectBtnAdd{{project.id}}" class="btn btn-inverse" onclick="add({{project.id}})">
                     <i id="project{{project.id}}" class="glyphicon glyphicon-plus"></i> {{ _('Add') }}
             </a>
-            <a id="appBtnDel{{project.id}}" class="btn btn-inverse" onclick="del({{project.id}})" style="display:none;">
+            <a id="projectBtnDel{{project.id}}" class="btn btn-inverse" onclick="del({{project.id}})" style="display:none;">
                     <i id="project{{project.id}}" class="glyphicon glyphicon-remove"></i> {{ _('Remove') }}
             </a></td>
         {% endif %}
@@ -134,10 +134,10 @@
         </div>
         
             <div class="col-md-1 hidden-sm hidden-xs same-size">
-                <div class="meter inset-shadow-white pull-right"><span data-progress="{{ project.overall_progress | round | int }}" data-app="{{project.short_name}}"><span></span></span></div>
+                <div class="meter inset-shadow-white pull-right"><span data-progress="{{ project.overall_progress | round | int }}" data-project="{{project.short_name}}"><span></span></span></div>
             </div>
         
-            <div class="col-sm-3 hidden-sm hidden-xs same-size" id="show-app-stats">
+            <div class="col-sm-3 hidden-sm hidden-xs same-size" id="show-project-stats">
                 <div class="white-rounded inset-shadow-white">
                     <span class="vcenter"><i class="fa fa-check-square-o fa-2x"></i><div class="padding-left-xs inline-block" id="{{project.short_name}}Complete">Completed: 0%</div></span>
                     <hr class="no-margins">
