--- a/templates/applications/new_blogpost.html
+++ b/templates/applications/new_blogpost.html
@@ -8,10 +8,10 @@
 {{ helper.render_local_nav(current_user, 'blog', project.short_name) }}
     <div class="container-padded hidden-container" style="display:none;">
         <div class="container container-padded">
-        <div id="app-form" class="row"> 
+        <div id="project-form" class="row"> 
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                {{ helper.render_project_title(app) }}
+                {{ helper.render_project_title(project) }}
                 <h2>{{ _('Write a new blog post for ad') }} {{ project.name }}</h2>
             <form class="form-horizontal" method="post" action="{{ url_for('project.new_blogpost', short_name=project.short_name) }}">
                 {{ form.hidden_tag() }}
