--- a/templates/applications/password.html
+++ b/templates/applications/password.html
@@ -6,10 +6,10 @@
 {% from "_formhelpers.html" import render_field %}
     <div class="container-padded">
         <div class="container container-padded">
-<div id="app-form" class="row"> 
+<div id="project-form" class="row"> 
     <div class="col-sm-6 col-sm-offset-3">
         {% include "_flash_messages.html" %}
-        {{ helper.render_project_title(app) }}
+        {{ helper.render_project_title(project) }}
         <h2>{{ _('Enter the password to contribute to this project:') }}</h2>
     <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
         {{ form.hidden_tag() }}
