--- a/templates/applications/snippets/sound.html
+++ b/templates/applications/snippets/sound.html
@@ -18,7 +18,7 @@
             <br/>
             <div class="alert-actions">
                 <a class="btn small" href="/">Go back</a>
-                <a class="btn small" href="/app">or, Check other projects</a>
+                <a class="btn small" href="/project">or, Check other projects</a>
             </div>
         </div>
         <div id="error" class="alert alert-error" style="display:none;">
