--- a/templates/applications/update_blogpost.html
+++ b/templates/applications/update_blogpost.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-sm-9 col-sm-offset-3">
                 {% include "_flash_messages.html" %}
-                    {{ helper.render_project_title(app) }}
+                    {{ helper.render_project_title(project) }}
                     <h2>{{ _('Edit the blog post') }}</h2>
                     <form class="form-horizontal" method="post" action="{{ url_for('project.update_blogpost',
                                                                     short_name=project.short_name,
